add bearer token to store and update endpoints
